<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinalProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ghost_hunter">GhostHunter</string>
    <string name="startbutton">start</string>
    <string name="splashscreen">contributors</string>   <string name="ProjectManagerMollySall">Project Manager:  Molly Sall</string>
    <string name="SoftwareArchitectZhengQin">Software Architect:  Zheng Qin</string>
    <string name="UserInterfaceDesignerChufanXiao">User Interface Designer: Chufan Xiao</string>
    <string name="QualityAssuranceManagerMattGosnell">Quality Assurance Manager: Matt Gosnell</string>
    <string name="courseinfo">University of Virginia cs2110 Fall 2014</string>
    <string name="up">up</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="down">down</string>
    <string name="bombbutton">Bomb</string>
<string name="attackbutton">Attack</string>
<string name="score">Score Is</string>
</resources>
